--- a/estilo.css
+++ b/estilo.css
@@ -203,7 +203,7 @@ main .sobre-nosotros{
  }
  .servicios-ind p{
    font-weight: 300;
-   text-align: justify;
+   text-align: center;
  }
  footer{
    background: #414141;
